Add note about environment setup

--- a/examples/basics/visualising_open_industrial_data.ipynb
+++ b/examples/basics/visualising_open_industrial_data.ipynb
@@ -47,7 +47,8 @@
     "id": "k8-Oj493ReNU"
    },
    "source": [
-    "## Environment Setup"
+    "## Environment Setup\n",
+    "Note: Only nacassary if running notebook in Colab"
    ]
   },
   {
@@ -57,39 +58,18 @@
     "id": "4Lf5pnaDBLnc"
    },
    "source": [
-    "#### Install the Cognite SDK package"
+    "#### Install the Cognite SDK package and update to latest version of numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "pbgkP3p59iiK"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.python.org/simple, https://cognite.jfrog.io/cognite/api/pypi/snakepit/simple\n",
-      "Requirement already satisfied: cognite-sdk in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (1.0.0a33)\n",
-      "Requirement already satisfied: pandas in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from cognite-sdk) (0.24.2)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.21.0 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from cognite-sdk) (2.21.0)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from pandas->cognite-sdk) (1.16.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from pandas->cognite-sdk) (2.8.0)\n",
-      "Requirement already satisfied: pytz>=2011k in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from pandas->cognite-sdk) (2019.1)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from requests<3.0.0,>=2.21.0->cognite-sdk) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from requests<3.0.0,>=2.21.0->cognite-sdk) (2.8)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from requests<3.0.0,>=2.21.0->cognite-sdk) (2019.3.9)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from requests<3.0.0,>=2.21.0->cognite-sdk) (1.24.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas->cognite-sdk) (1.12.0)\n",
-      "Looking in indexes: https://pypi.python.org/simple, https://cognite.jfrog.io/cognite/api/pypi/snakepit/simple\n",
-      "Requirement already up-to-date: numpy in /Users/rebeccawiborgseyfarth/miniconda3/lib/python3.7/site-packages (1.16.4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install cognite-sdk\n",
     "!pip install --upgrade numpy"
@@ -175,7 +155,8 @@
     }
    ],
    "source": [
-    "client = CogniteClient(api_key=getpass(\"Open Industrial Data API-KEY: \"), client_name=\"OID_example\")"
+    "client = CogniteClient(api_key=getpass(\"Open Industrial Data API-KEY: \"),\n",
+    "                       project=\"publicdata\", client_name=\"OID_example\")"
    ]
   },
   {
