updated photogrammtery example

--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -24,7 +24,18 @@
     "The tag detection is done in two steps. First we use Convolution Neural Networks (CNN) for detection of tags, and thereafter optical character recognition (OCR) is used for recognizing the tag text. In the last step, the image pixel coordinates extracted by the tag detector are mapped to 3D locations.\n",
     "\n",
     "\n",
-    "<img src=\"images/pipeline.png\" width=\"600\" align=\"center\">"
+    "<img src=\"images/pipeline.png\" width=\"600\" align=\"center\">\n",
+    "\n",
+    "\n",
+    "3D data genereated by photogrammetry is organized in models and revisions in Cognite Data Fusion (CDF), similar to how other 3D data is stored in CDF:\n",
+    "\n",
+    "   * Models are placeholders for a set of revisions.\n",
+    "\n",
+    "   * Revisions contain the 3D data.\n",
+    "\n",
+    "Revisions can for instance represent time evolution of the 3D model, or different versions of the model (high detail vs low detail).\n",
+    "\n",
+    "When you create a new revision and upload images, the reconstruction will start immediately. Depending on the the quality and number of images, this can take some time. A revision can have status `CREATED`, `IN_PROGRESS`, `SUCCESS` or `FAILED`, which can be tracked during processing."
    ]
   },
   {
@@ -33,7 +44,7 @@
    "source": [
     "## Step-by-step example\n",
     "\n",
-    "The photogrammetry API is currently only enabled for a few selected tenants, including **mltest**. If you want access from other tenants, please contact us via the **#ml-vision** Slack channel or open a pull request in this repo.\n",
+    "The photogrammetry API is currently only enabled for a few selected tenants. If you want access from other tenants, please contact us via the **#ml-vision** Slack channel or open a pull request in this repo.\n",
     "\n",
     "First, we make the imports we'll need for this tutorial and use an API key to authenticate. Make sure that you have first set the API key as an environment variable."
    ]
@@ -82,30 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add assets to your Tenant\n",
-    "\n",
-    "When contextualising the 3D model, we compare the detected tags suggested by the model, with actual asset tags obtained from either the assets in the current tenant or provided as an argument. If the current tenant does not have the asset you want to detect, you can add it using the following function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_asset(client, name):\n",
-    "    my_asset = Asset(name)\n",
-    "    assets_to_post = [my_asset]\n",
-    "    response = client.assets.post_assets(assets_to_post)\n",
-    "    \n",
-    "#add_asset(client, \"50CX0001A\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a Photogrammetry model\n",
+    "### Create and retrieve a Photogrammetry model\n",
     "\n",
     "To create a Photogrammetry model you need to provide the `name` field. "
    ]
@@ -116,14 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"my_contextualised_model\" # Your model name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you want to contextualise the model (i.e. detect tags), you also have to set contextualise to `True`."
+    "name = \"my first model\" # Your model name"
    ]
   },
   {
@@ -132,51 +113,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contextualise_model = True"
+    "def create_photogrammetry_model(name):\n",
+    "    response = client.post(url=f\"{BASEURL}/photogrammetry\",\n",
+    "                           body={\"items\": [{\"name\": name}]})\n",
+    "    model = response.json()[\"items\"][0]\n",
+    "    return model\n",
+    "\n",
+    "model = create_photogrammetry_model(name)\n",
+    "model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When contextualising a model, our service will detect tag ids which are compared against either a provided list of tag ids, or existing tags in the current tenant. "
+    "Note that, multiple models can be created in one request but here we only create one single model. Once created, you can retrieve the model by id:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "def create_photogrammetry_model(client, name, contextualise=False, tag_list=None):\n",
-    "    response = client.post(\n",
-    "        url= f\"{BASEURL}/photogrammetry\",\n",
-    "        body={\"name\": name, \"contextualise\": contextualise, \"tagList\": tag_list}\n",
-    "    )\n",
+    "def get_photogrammetry_model(p_id):\n",
+    "    response = client.get(url=f\"{BASEURL}/photogrammetry/{p_id}\")\n",
     "    return response.json()\n",
     "\n",
-    "\n",
-    "# Option 1) without contextualisation:\n",
-    "# photogrammetry_model = create_photogrammetry_model(client, name)\n",
-    "\n",
-    "# Option 2) contextualisation from assets in the tenant:\n",
-    "# photogrammetry_model = create_photogrammetry_model(client, name, contextualise=contextualise_model) \n",
-    "\n",
-    "# Option 3) contextualisation from tag_list\n",
-    "photogrammetry_model = create_photogrammetry_model(client,\n",
-    "                                                   name, \n",
-    "                                                   contextualise=contextualise_model, \n",
-    "                                                   tag_list=['50CX0001A'])\n",
-    "photogrammetry_model"
+    "get_photogrammetry_model(p_id = model[\"id\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retrieve information about single a Photogrammetry model\n",
+    "### List Photogrammetry model revisions\n",
     "\n",
-    "Returns info about a specific photogrammetry model. Takes model id as argument."
+    "The list of all available revisions in the newly created Photogrammetry model should be empty:"
    ]
   },
   {
@@ -185,12 +160,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def photogrammetry_model_info(photogrammetry_model_id):\n",
-    "    url = f\"{BASEURL}/photogrammetry/{photogrammetry_model_id}\"\n",
-    "    response = client.get(url=url)\n",
+    "def list_revisions(p_id):\n",
+    "    response = client.get(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\")\n",
     "    return response.json()\n",
     "\n",
-    "photogrammetry_model_info(photogrammetry_model[\"id\"])"
+    "list_revisions(model[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create and retrieve a Photogrammetry model revision\n",
+    "\n",
+    "When creating a revision, you can choose to detect tags in the images that are used to generate the 3D model. This can be done by setting `detectTags=True` (default is `False`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detectTags = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_revision(p_id, detectTags):\n",
+    "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\", \n",
+    "                           body={\"items\": [{\"detectTags\": detectTags}]})\n",
+    "    revision = response.json()[\"items\"][0]\n",
+    "    return revision\n",
+    "\n",
+    "revision = create_revision(p_id=model[\"id\"], detectTags=detectTags)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As for Photogrammetry models, multiple revisions can be created in one request, but here we create one signle revision. Once created, you can retrieve the revision by id:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_revision(p_id, r_id):\n",
+    "    response = client.get(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions/{r_id}\")\n",
+    "    return response.json()\n",
+    "\n",
+    "get_revision(p_id=model[\"id\"], r_id=revision[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This revision will now be part of the model we created earlier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_revisions(model[\"id\"])"
    ]
   },
   {
@@ -199,7 +244,7 @@
    "source": [
     "### Upload images\n",
     "\n",
-    "To upload images, you need to provide the upload url for the Photogrammetry model and the filepath for the zip file containing the images. The reconstruction will start immediately after the upload. We have created a test dataset, which you can download from [here](https://drive.google.com/open?id=1VaIURFCuv0BT2ny_-wcz6Kucayj5qkIk) or you can use your own images (*remember to change the zip file path!*). \n",
+    "To upload images, you need to provide the upload url for the revision and the filepath for the zip file containing the images. The reconstruction will start immediately after the upload. We have created a test dataset, which you can download from [here](https://drive.google.com/open?id=1VaIURFCuv0BT2ny_-wcz6Kucayj5qkIk) or you can use your own images (*remember to change the zip file path!*). \n",
     "\n",
     "\n",
     "<div class=\"alert alert-block alert-info\"><b>\n",
@@ -227,18 +272,18 @@
     "    with open(zip_file_path, \"rb\") as file:\n",
     "        requests.put(upload_url, data=file, headers=headers)\n",
     "        \n",
-    "zip_file_path = \"path/to/zipfile.zip\" # CHANGE ME! \n",
+    "zip_file_path = \"path/to/zipfile.zip\" # CHANGE ME!\n",
     "\n",
-    "upload_images(photogrammetry_model[\"uploadURL\"], zip_file_path)"
+    "upload_images(revision[\"uploadURL\"], zip_file_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retrieve the 3D file and Tag locations\n",
+    "### Retrieve the 3D file\n",
     "\n",
-    "To check whether your 3D model is ready, use `photogrammetry_model_info()` to see if the photogrammetry job is finished. If that is the case, `status` will be `SUCCESS` and you get a download URL link that can be used to download the 3D file (fbx file). The detected tags and their 3D location will be part of the response. \n",
+    "To check whether your 3D model is ready, use `get_revision()` to see if the reconstruction job is finished. If that is the case, `status` will be `SUCCESS` and you get a download URL link that can be used to download the 3D file (fbx file).\n",
     "\n",
     "\n",
     "<div class=\"alert alert-block alert-info\"><b>\n",
@@ -252,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = photogrammetry_model_info(photogrammetry_model[\"id\"])\n",
+    "response = get_revision(p_id=model[\"id\"], r_id=revision[\"id\"])\n",
     "\n",
     "output_filename = \"output.fbx\"\n",
     "\n",
@@ -264,12 +309,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve tag locations\n",
+    "\n",
+    "All detected labels can be retrieved by:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response[\"tags\"]"
+    "def get_tags(p_id, r_id):\n",
+    "    response = client.get(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions/{r_id}/tags\")\n",
+    "    return response.json()\n",
+    "\n",
+    "get_tags(p_id=model[\"id\"], r_id=revision[\"id\"])"
    ]
   },
   {
@@ -278,7 +336,7 @@
    "source": [
     "### Delete the photogrammetry model\n",
     "\n",
-    "To avoid crowding it might be a good idea to remove old/unused photogrammetry models. Currently this can be done like this:"
+    "To avoid crowding it might be a good idea to remove old/unused photogrammetry models and revisions. A revision can be deleted by:"
    ]
   },
   {
@@ -287,13 +345,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_photogrammetry(photogrammetry_model_id):\n",
-    "    url = f\"{BASEURL}/photogrammetry/{photogrammetry_model_id}\"\n",
+    "def delete_revision(p_id, r_id):\n",
+    "    url = f\"{BASEURL}/photogrammetry/{p_id}/revisions/{r_id}\"\n",
     "    response = client.delete(url=url)\n",
     "    return response.json()\n",
     "\n",
+    "delete_revision(p_id = model[\"id\"], r_id=revision[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A photogrammetry model can be deleted by (will also delete all its revisions): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_photogrammetry(p_id):\n",
+    "    url = f\"{BASEURL}/photogrammetry/{p_id}\"\n",
+    "    response = client.delete(url=url)\n",
+    "    return response.json()\n",
     "\n",
-    "delete_photogrammetry(photogrammetry_model[\"id\"])"
+    "delete_photogrammetry(p_id = model[\"id\"])"
    ]
   },
   {
