--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## Step-by-step example\n",
     "\n",
-    "The photogrammetry API is currently only enabled for a few selected tenants. If you want access from other tenants, please contact us via the **#ml-vision** Slack channel or open a pull request in this repo.\n",
+    "The photogrammetry API is currently only enabled for a few selected tenants. If you want access from other tenants, please contact Cognite to get it enabled or open a pull request in this repo.\n",
     "\n",
     "First, we make the imports we'll need for this tutorial and use an API key to authenticate. Make sure that you have first set the API key as an environment variable."
    ]
