--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "### Create and retrieve a Photogrammetry model revision\n",
     "\n",
-    "When creating a revision, you can choose to detect tags in the images that are used to generate the 3D model. This can be done by setting `detectTags=True` (default is `False`):"
+    "When creating a revision, you can choose to detect tags in the images that are used to generate the 3D model. This can be done by setting `detect_tags=True` (default is `False`):"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detectTags = True"
+    "detect_tags = True"
    ]
   },
   {
@@ -191,13 +191,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_revision(p_id, detectTags):\n",
+    "def create_revision(p_id, detect_tags):\n",
     "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\", \n",
-    "                           body={\"items\": [{\"detectTags\": detectTags}]})\n",
+    "                           body={\"items\": [{\"detectTags\": detect_tags}]})\n",
     "    revision = response.json()[\"items\"][0]\n",
     "    return revision\n",
     "\n",
-    "revision = create_revision(p_id=model[\"id\"], detectTags=detectTags)"
+    "revision = create_revision(p_id=model[\"id\"], detect_tags=detect_tags)"
    ]
   },
   {
