--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -60,7 +60,7 @@
     "from cognite.client import CogniteClient\n",
     "from cognite.client.stable.assets import Asset\n",
     "\n",
-    "BASEURL = \"/api/playground/vision\"\n",
+    "BASEURL = \"/api/playground\"\n",
     "os.environ[\"COGNITE_DISABLE_GZIP\"] = \"1\"\n",
     "client = CogniteClient(api_key=os.environ['COGNITE_API_KEY'])"
    ]
@@ -272,7 +272,7 @@
     "    with open(zip_file_path, \"rb\") as file:\n",
     "        requests.put(upload_url, data=file, headers=headers)\n",
     "        \n",
-    "zip_file_path = \"path/to/zipfile.zip\" # CHANGE ME!\n",
+    "zip_file_path = \"/path/to/zipfile.zip\" # CHANGE ME!\n",
     "\n",
     "upload_images(revision[\"uploadURL\"], zip_file_path)"
    ]
@@ -406,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
