--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "The photogrammetry API is currently only enabled for a few selected tenants. If you want access from other tenants, please contact Cognite to get it enabled or open a pull request in this repo.\n",
     "\n",
-    "First, we make the imports we'll need for this tutorial and use an API key to authenticate. Make sure that you have first set the API key as an environment variable."
+    "First, we make the imports we'll need for this tutorial and use an API key to authenticate. Make sure that you have set the API key and client name as environment variables and have installed the latest version of [Cognite Python SDK](https://cognite-docs.readthedocs-hosted.com/projects/cognite-sdk-python/en/latest/)."
    ]
   },
   {
@@ -58,11 +58,11 @@
     "import os\n",
     "from urllib.request import urlretrieve\n",
     "from cognite.client import CogniteClient\n",
-    "from cognite.client.stable.assets import Asset\n",
     "\n",
     "BASEURL = \"/api/playground\"\n",
     "os.environ[\"COGNITE_DISABLE_GZIP\"] = \"1\"\n",
-    "client = CogniteClient(api_key=os.environ['COGNITE_API_KEY'])"
+    "client = CogniteClient(api_key=os.environ['COGNITE_API_KEY'], \n",
+    "                       client_name=os.environ['COGNITE_CLIENT_NAME'])"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "def create_photogrammetry_model(name):\n",
     "    response = client.post(url=f\"{BASEURL}/photogrammetry\",\n",
-    "                           body={\"items\": [{\"name\": name}]})\n",
+    "                           json={\"items\": [{\"name\": name}]})\n",
     "    model = response.json()[\"items\"][0]\n",
     "    return model\n",
     "\n",
@@ -193,7 +193,7 @@
    "source": [
     "def create_revision(p_id, detect_tags):\n",
     "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\", \n",
-    "                           body={\"items\": [{\"detectTags\": detect_tags}]})\n",
+    "                           json={\"items\": [{\"detectTags\": detect_tags}]})\n",
     "    revision = response.json()[\"items\"][0]\n",
     "    return revision\n",
     "\n",
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As for Photogrammetry models, multiple revisions can be created in one request, but here we create one signle revision. Once created, you can retrieve the revision by id:"
+    "As for Photogrammetry models, multiple revisions can be created in one request, but here we create one signle revision (you need to create a new revision every time you upload a new set of images). Once created, you can retrieve the revision by id:"
    ]
   },
   {
