modified photogrammetry example

--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -346,8 +346,8 @@
    "outputs": [],
    "source": [
     "def delete_revision(p_id, r_id):\n",
-    "    url = f\"{BASEURL}/photogrammetry/{p_id}/revisions/{r_id}\"\n",
-    "    response = client.delete(url=url)\n",
+    "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions/delete\",\n",
+    "                           json={\"items\": [{\"id\": r_id}]})\n",
     "    return response.json()\n",
     "\n",
     "delete_revision(p_id = model[\"id\"], r_id=revision[\"id\"])"
@@ -367,8 +367,8 @@
    "outputs": [],
    "source": [
     "def delete_photogrammetry(p_id):\n",
-    "    url = f\"{BASEURL}/photogrammetry/{p_id}\"\n",
-    "    response = client.delete(url=url)\n",
+    "    response = client.post(url=f\"{BASEURL}/photogrammetry/delete\",\n",
+    "                           json={\"items\": [{\"id\": p_id}]})\n",
     "    return response.json()\n",
     "\n",
     "delete_photogrammetry(p_id = model[\"id\"])"
