--- a/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
@@ -119,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = model_hosting.models.create_model(\"fahrenheit-to-celsius\").name"
+    "model_name = \"fahrenheit-to-celsius\"\n",
+    "model_hosting.models.create_model(model_name)"
    ]
   },
   {
@@ -135,9 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_name = deploy_model_version(\n",
+    "model_version_name = \"fahrenheit-celsius-v1\"\n",
+    "deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"fahrenheit-celsius-v1\",\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\"\n",
     ")"
    ]
