Updates after review.

--- a/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
+++ b/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
@@ -239,8 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = model_hosting.models.create_model(\n",
-    "    \"mean-x-y\",\n",
+    "model_name = \"mean-x-y\"\n",
+    "model_hosting.models.create_model(\n",
+    "    model_name,\n",
     "    input_fields=[\n",
     "        {\"name\": \"x\", \"type\": \"TIME_SERIES\"},\n",
     "        {\"name\": \"y\", \"type\": \"TIME_SERIES\"},\n",
@@ -248,7 +249,7 @@
     "    output_fields=[\n",
     "        {\"name\": \"mean\", \"type\": \"TIME_SERIES\"},\n",
     "    ],\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -264,9 +265,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_name = deploy_model_version(\n",
+    "model_version_name = \"mean-x-y-v1\"\n",
+    "deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"mean-x-y-v1\",\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\"\n",
     ")"
    ]
@@ -410,12 +412,13 @@
     "    )\n",
     ")\n",
     "\n",
-    "schedule_name = model_hosting.schedules.create_schedule(\n",
+    "schedule_name = \"mean-x-y-schedule\"\n",
+    "model_hosting.schedules.create_schedule(\n",
     "    model_name=model_name,\n",
-    "    schedule_name=\"mean-x-y-schedule\",\n",
+    "    schedule_name=schedule_name,\n",
     "    schedule_data_spec=schedule_data_spec,\n",
     "    description=\"A cool schedule\"\n",
-    ").name"
+    ")"
    ]
   },
   {
