--- a/examples/model_hosting/notebook/training/LocalTraining.ipynb
+++ b/examples/model_hosting/notebook/training/LocalTraining.ipynb
@@ -338,7 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = model_hosting.models.create_model(\"tutorial-friction\").name"
+    "model_name = \"tutorial-friction\"\n",
+    "model_hosting.models.create_model(model_name)"
    ]
   },
   {
@@ -354,9 +355,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_name = deploy_model_version(\n",
+    "model_version_name = \"tutorial-friction-v1\"\n",
+    "deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"tutorial-friction-v1\",\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\",\n",
     "    artifacts_directory=\"artifacts/tutorial-friction\",\n",
     ")"
