--- a/examples/model_hosting/schedule_troubleshooting/ScheduleTroubleshooting.ipynb
+++ b/examples/model_hosting/schedule_troubleshooting/ScheduleTroubleshooting.ipynb
@@ -85,12 +85,13 @@
    },
    "outputs": [],
    "source": [
-    "model_name = mlh.models.create_model(\n",
-    "    name = \"cpr-function\",\n",
+    "model_name = \"cpr-function\"\n",
+    "mlh.models.create_model(\n",
+    "    name=model_name,\n",
     "    input_fields=[{\"name\": \"x1\", \"type\": \"TIME_SERIES\"}, \n",
     "                  {\"name\": \"x2\", \"type\": \"TIME_SERIES\"}],\n",
     "    output_fields=[{\"name\": \"y\", \"type\": \"TIME_SERIES\"}],\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -152,11 +153,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "version_name = mlh.versions.deploy_model_version(\n",
+    "version_name = \"broken\"\n",
+    "mlh.versions.deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"broken\",\n",
+    "    version_name=version_name,\n",
     "    source_package_id=source_package_id,\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -266,12 +268,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule_name = mlh.schedules.create_schedule(\n",
+    "schedule_name = \"schedule-troubleshooting-tutorial\"\n",
+    "mlh.schedules.create_schedule(\n",
     "    model_name=model_name,\n",
-    "    schedule_name=\"schedule-troubleshooting-tutorial\",\n",
+    "    schedule_name=schedule_name,\n",
     "    schedule_data_spec=schedule_data_spec,\n",
     "    description=\"CPR of 1stgcomp at Valhall\"\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -364,11 +367,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "version_name_fixed = mlh.versions.deploy_model_version(\n",
+    "version_name_fixed = \"cpr-function-fixed\"\n",
+    "mlh.versions.deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"cpr-function-fixed\",\n",
+    "    version_name=version_name_fixed,\n",
     "    source_package_id=source_package_id_fixed,\n",
-    ").name"
+    ")"
    ]
   },
   {
