--- a/examples/model_hosting/simple_function/SimpleFunction.ipynb
+++ b/examples/model_hosting/simple_function/SimpleFunction.ipynb
@@ -50,11 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = mlh.models.create_model(\n",
-    "    name=\"my-simple-function\",\n",
+    "model_name = \"my-simple-function\"\n",
+    "mlh.models.create_model(\n",
+    "    name=model_name,\n",
     "    input_fields=[{\"name\": \"x1\", \"type\": \"TIME_SERIES\"}, {\"name\": \"x2\", \"type\": \"TIME_SERIES\"}],\n",
     "    output_fields=[{\"name\": \"y\", \"type\": \"TIME_SERIES\"}],\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -90,11 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "version_name = mlh.versions.deploy_model_version(\n",
+    "version_name = \"my-simple-function-v1\"\n",
+    "mlh.versions.deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"my-simple-function-v1\",\n",
+    "    version_name=version_name,\n",
     "    source_package_id=source_package_id,\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -177,12 +179,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule_name = mlh.schedules.create_schedule(\n",
+    "schedule_name = \"tutorial-schedule\"\n",
+    "mlh.schedules.create_schedule(\n",
     "    model_name=model_name,\n",
-    "    schedule_name=\"tutorial-schedule\",\n",
+    "    schedule_name=schedule_name,\n",
     "    schedule_data_spec=schedule_data_spec,\n",
     "    description=\"Some description\"\n",
-    ").name"
+    ")"
    ]
   },
   {
