More cosmetic updates.

--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -231,9 +231,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_id = deploy_model_version(\n",
+    "model_version_name = \"temperature-converter-v1\"\n",
+    "deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"temperature-converter-v1\",\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\"\n",
     ")"
    ]
@@ -262,7 +263,6 @@
     }
    ],
    "source": [
-    "model_version_name = \"temperature-converter-v1\"\n",
     "model_hosting.versions.get_model_version(model_name, model_version_name).status"
    ]
   },
