--- a/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
+++ b/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
@@ -239,8 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = mlh.models.create_model(\n",
-    "    name=\"tutorial-model\",\n",
+    "model_name = \"tutorial-model\"\n",
+    "mlh.models.create_model(\n",
+    "    name=model_name,\n",
     "    input_fields=[\n",
     "        {\"name\": \"temp\", \"type\": \"TIME_SERIES\"},\n",
     "        {\"name\": \"pressure\", \"type\": \"TIME_SERIES\"}, \n",
@@ -249,7 +250,7 @@
     "    output_fields=[{\"name\": \"production_rate\", \"type\": \"TIME_SERIES\"}],\n",
     "    description=\"Some description\", # Optional\n",
     "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -279,14 +280,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "version_name = mlh.versions.deploy_model_version(\n",
+    "version_name = \"tutorial-model-version\"\n",
+    "mlh.versions.deploy_model_version(\n",
     "    model_name=model_name,\n",
-    "    version_name=\"tutorial-model-version\",\n",
+    "    version_name=version_name,\n",
     "    source_package_id=source_package_id,\n",
     "    description=\"Some description\", # Optional\n",
     "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
     "    artifacts_directory=\"artifacts\"\n",
-    ").name"
+    ")"
    ]
   },
   {
@@ -472,14 +474,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule_name = mlh.schedules.create_schedule(\n",
+    "schedule_name = \"tutorial-schedule\"\n",
+    "mlh.schedules.create_schedule(\n",
     "    model_name=model_name,\n",
-    "    schedule_name=\"tutorial-schedule\",\n",
+    "    schedule_name=schedule_name,\n",
     "    schedule_data_spec=schedule_data_spec,\n",
     "    args={}, # Optional - Will be passed to all predictions\n",
     "    description=\"Some description\", # Optional\n",
     "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
-    ").name"
+    ")"
    ]
   },
   {
