Minor cosmetic change.

--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -215,7 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = model_hosting.models.create_model(\"temperature-converter\").name"
+    "model_name = \"temperature-converter\"\n",
+    "model_name = model_hosting.models.create_model(model_name)"
    ]
   },
   {
