--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "model_name = \"temperature-converter\"\n",
-    "model_name = model_hosting.models.create_model(model_name)"
+    "model_hosting.models.create_model(model_name)"
    ]
   },
   {
