[DT-516] Update Model Hosting examples to use SDK v1. (#31)
* Update scheduled_model

* Update simple_function

* Update schedule_troubleshooting

* Update notebook/simple_temperature_converter.

* Update notebook/advanced_temperature_converter

* Update notebook/simple_scheduled_calculation.

* Update notebook/training/LocalTraining

* Delete simple_train_predict

* Delete notebook/training/CloudTraning

* Update data_spec.py and data_spec_schedule.py.

* Remove alpha-version from cognite-model-hosting package.

* Run black.

* Add .vscode to .gitignore.

* Updates after review.

* Updates after review.

* More cosmetic updates.

* Minor cosmetic change.

* Cosmetics.

--- a/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "21.11111111111111"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cognite.client import CogniteClient\n",
+    "from cognite.client.experimental import CogniteClient\n",
     "from cognite.model_hosting.notebook import deploy_model_version\n",
     "\n",
-    "model_hosting = CogniteClient().experimental.model_hosting"
+    "model_hosting = CogniteClient().model_hosting"
    ]
   },
   {
@@ -115,11 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = model_hosting.models.create_model(\"fahrenheit-to-celsius\").id"
+    "model_name = \"fahrenheit-to-celsius\"\n",
+    "model_hosting.models.create_model(model_name)"
    ]
   },
   {
@@ -131,13 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_id = deploy_model_version(\n",
-    "    name=\"fahrenheit-celsius-v1\",\n",
-    "    model_id=model_id,\n",
+    "model_version_name = \"fahrenheit-celsius-v1\"\n",
+    "deploy_model_version(\n",
+    "    model_name=model_name,\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\"\n",
     ")"
    ]
@@ -151,22 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DEPLOYING'"
+       "'READY'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_hosting.models.get_model_version(model_id, model_version_id).status"
+    "model_hosting.versions.get_model_version(model_name, model_version_name).status"
    ]
   },
   {
@@ -195,7 +197,7 @@
     }
    ],
    "source": [
-    "model_hosting.models.online_predict(model_id, model_version_id, instances=[70, 80, 90])"
+    "model_hosting.models.online_predict(model_name, model_version_name, instances=[70, 80, 90])"
    ]
   },
   {
@@ -218,8 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_package_id = model_hosting.models.get_model_version(model_id, model_version_id).source_package_id\n",
-    "model_hosting.models.delete_model(model_id)\n",
+    "source_package_id = model_hosting.versions.get_model_version(model_name, model_version_name).source_package_id\n",
+    "model_hosting.models.delete_model(model_name)\n",
     "model_hosting.source_packages.delete_source_package(source_package_id)"
    ]
   }
@@ -240,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
