--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -196,10 +196,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cognite.client import CogniteClient\n",
+    "from cognite.client.experimental import CogniteClient\n",
     "from cognite.model_hosting.notebook import deploy_model_version\n",
     "\n",
-    "model_hosting = CogniteClient().experimental.model_hosting"
+    "model_hosting = CogniteClient().model_hosting"
    ]
   },
   {
@@ -215,7 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = model_hosting.models.create_model(\"temperature-converter\").id"
+    "model_name = \"temperature-converter\"\n",
+    "model_hosting.models.create_model(model_name)"
    ]
   },
   {
@@ -231,9 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_version_id = deploy_model_version(\n",
-    "    name=\"temperature-converter-v1\",\n",
-    "    model_id=model_id,\n",
+    "model_version_name = \"temperature-converter-v1\"\n",
+    "deploy_model_version(\n",
+    "    model_name=model_name,\n",
+    "    version_name=model_version_name,\n",
     "    runtime_version=\"0.1\"\n",
     ")"
    ]
@@ -262,7 +264,7 @@
     }
    ],
    "source": [
-    "model_hosting.models.get_model_version(model_id, model_version_id).status"
+    "model_hosting.versions.get_model_version(model_name, model_version_name).status"
    ]
   },
   {
@@ -293,8 +295,8 @@
    ],
    "source": [
     "model_hosting.models.online_predict(\n",
-    "    model_id,\n",
-    "    model_version_id,\n",
+    "    model_name,\n",
+    "    model_version_name,\n",
     "    instances=[[0, -10, 10], [-50, 100]],\n",
     "    args={\"from_scale\": \"C\", \"to_scale\": \"F\"}\n",
     ")"
@@ -320,8 +322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_package_id = model_hosting.models.get_model_version(model_id, model_version_id).source_package_id\n",
-    "model_hosting.models.delete_model(model_id)\n",
+    "source_package_id = model_hosting.versions.get_model_version(model_name, model_version_name).source_package_id\n",
+    "model_hosting.models.delete_model(model_name)\n",
     "model_hosting.source_packages.delete_source_package(source_package_id)"
    ]
   }
@@ -342,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
