--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -12,21 +12,7 @@
     "</b> \n",
     "</div>\n",
     "\n",
-    "In this tutorial we will go through how to use Cognite's Photogrammetry API to create contextualised 3D models using images.\n",
-    "\n",
-    "The API reference is available here: [https://doc.cognitedata.com/api/playground/](https://doc.cognitedata.com/api/playground/)\n",
-    "\n",
-    "\n",
-    "### Background\n",
-    "\n",
-    "In order to create contextualised 3D models we have developed a pipeline with several modular parts. First, images are uploaded as a zip file by the user. These images go through a quality control step, where low quality images (blurry) are filtered out. Next, the 3D reconstruction and tag detection steps are started. The former is done by using a method called photogrammetry, which uses overlapping images from a real-world object or scene to create a 3D model.\n",
-    "\n",
-    "The tag detection is done in two steps. First we use Convolution Neural Networks (CNN) for detection of tags, and thereafter optical character recognition (OCR) is used for recognizing the tag text. In the last step, the image pixel coordinates extracted by the tag detector are mapped to 3D locations.\n",
-    "\n",
-    "\n",
-    "<img src=\"images/pipeline.png\" width=\"600\" align=\"center\">\n",
-    "\n",
-    "\n",
+    "In this tutorial we will go through how to use Cognite's Photogrammetry API to create 3D models using images.\n",
     "3D data genereated by photogrammetry is organized in models and revisions in Cognite Data Fusion (CDF), similar to how other 3D data is stored in CDF:\n",
     "\n",
     "   * Models are placeholders for a set of revisions.\n",
@@ -35,7 +21,10 @@
     "\n",
     "Revisions can for instance represent time evolution of the 3D model, or different versions of the model (high detail vs low detail).\n",
     "\n",
-    "When you create a new revision and upload images, the reconstruction will start immediately. Depending on the the quality and number of images, this can take some time. A revision can have status `CREATED`, `IN_PROGRESS`, `SUCCESS` or `FAILED`, which can be tracked during processing."
+    "When you create a new revision and upload images, the reconstruction will start immediately. Depending on the the quality and number of images, this can take some time. A revision can have status `CREATED`, `IN_PROGRESS`, `SUCCESS` or `FAILED`, which can be tracked during processing.\n",
+    "\n",
+    "\n",
+    "The API reference is available here: [https://doc.cognitedata.com/api/playground/](https://doc.cognitedata.com/api/playground/)"
    ]
   },
   {
@@ -62,7 +51,8 @@
     "BASEURL = \"/api/playground\"\n",
     "os.environ[\"COGNITE_DISABLE_GZIP\"] = \"1\"\n",
     "client = CogniteClient(api_key=os.environ['COGNITE_API_KEY'], \n",
-    "                       client_name=os.environ['COGNITE_CLIENT_NAME'])"
+    "                       client_name=os.environ['COGNITE_CLIENT_NAME'],\n",
+    "                       project=os.environ['COGNITE_PROJECT'])"
    ]
   },
   {
@@ -171,18 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create and retrieve a Photogrammetry model revision\n",
-    "\n",
-    "When creating a revision, you can choose to detect tags in the images that are used to generate the 3D model. This can be done by setting `detect_tags=True` (default is `False`):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "detect_tags = True"
+    "### Create and retrieve a Photogrammetry model revision"
    ]
   },
   {
@@ -193,7 +172,7 @@
    "source": [
     "def create_revision(p_id, detect_tags):\n",
     "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\", \n",
-    "                           json={\"items\": [{\"detectTags\": detect_tags}]})\n",
+    "                           json={\"items\": [{}]})\n",
     "    revision = response.json()[\"items\"][0]\n",
     "    return revision\n",
     "\n",
@@ -306,28 +285,6 @@
     "    urlretrieve(download_url, output_filename)\n",
     "    \n",
     "response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Retrieve tag locations\n",
-    "\n",
-    "All detected labels can be retrieved by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_tags(p_id, r_id):\n",
-    "    response = client.get(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions/{r_id}/tags\")\n",
-    "    return response.json()\n",
-    "\n",
-    "get_tags(p_id=model[\"id\"], r_id=revision[\"id\"])"
    ]
   },
   {
