--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -170,13 +170,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_revision(p_id, detect_tags):\n",
+    "def create_revision(p_id):\n",
     "    response = client.post(url=f\"{BASEURL}/photogrammetry/{p_id}/revisions\", \n",
     "                           json={\"items\": [{}]})\n",
     "    revision = response.json()[\"items\"][0]\n",
     "    return revision\n",
     "\n",
-    "revision = create_revision(p_id=model[\"id\"], detect_tags=detect_tags)"
+    "revision = create_revision(p_id=model[\"id\"])"
    ]
   },
   {
