Update model hosting docs

--- a/examples/model_hosting/notebook/training/LocalTraining.ipynb
+++ b/examples/model_hosting/notebook/training/LocalTraining.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Requirements**:\n",
     "- You need to have `cognite-model-hosting-notebook`, `pandas`, `scikit-learn` and `matplotlib` installed\n",
-    "- The environment variable `COGNITE_API_KEY` should be set"
+    "- The environment variables `COGNITE_API_KEY` and `COGNITE_CLIENT_NAME` should be set"
    ]
   },
   {
