--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "**Requirements**:\n",
     "- You need to have the `cognite-model-hosting-notebook` package installed\n",
-    "- The environment variable `COGNITE_API_KEY` should be set"
+    "- The environment variables `COGNITE_API_KEY` and `COGNITE_CLIENT_NAME` should be set"
    ]
   },
   {
