--- a/examples/model_hosting/simple_function/SimpleFunction.ipynb
+++ b/examples/model_hosting/simple_function/SimpleFunction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Requirements**:\n",
     "- You need to have the `cognite-sdk` package installed\n",
-    "- The environment variable `COGNITE_API_KEY` should be set"
+    "- The environment variables `COGNITE_API_KEY` and `COGNITE_CLIENT_NAME` should be set"
    ]
   },
   {
